@@ -7,6 +7,9 @@
 	  so we no longer need to check run number ourselves
 	* Tagging SusyCommon-00-00-32
 
+2012-08-14 Steve
+	* Adding SusyMetValidation, a class for analyzing the MET in the d3pds
+
 2012-08-13 Steve
 	* To make sure I'm allowing all samples allowed by the Hfor tool, I copied
 	  the whole function which checks the run number into SusyD3PDAna.isHFORSample()
